--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -1,38 +1,18 @@
-.App {
+html {
+  background-color: #35858b;
+}
+.brand {
+  padding: 1.5rem;
+  margin: 1rem;
+}
+.brandInput {
+  background-color: #96fdff;
+  color: black;
   text-align: center;
-}
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 1vw;
+  font-weight: 500;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-transform: uppercase;
+  word-spacing: 0.5vw;
 }
