--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -30,3 +30,18 @@ body {
 .cards {
   width: 10 em;
 }
+.card {
+  background-color: burlywood;
+  margin: 5px;
+  
+}
+.card img{
+  width: 200px;
+  height: 200px;
+  
+}
+.card p{
+  text-align: center;
+  color: black;
+  
+}
