--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #35858b;
+  background-color: #35858b !important;
 }
 .brand {
   padding: 1.5rem;
@@ -17,8 +17,6 @@ body {
   word-spacing: 0.5vw;
 }
 
-
-  
 .listDesign {
   display: flex;
   flex-wrap: wrap;
@@ -33,15 +31,12 @@ body {
 .card {
   background-color: burlywood;
   margin: 5px;
-  
 }
-.card img{
+.card img {
   width: 200px;
   height: 200px;
-  
 }
-.card p{
+.card p {
   text-align: center;
   color: black;
-  
 }
