--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #35858b !important;
-}
 .brand {
   padding: 1.5rem;
   margin: 1rem;
@@ -26,17 +23,70 @@ body {
 }
 
 .cards {
-  width: 10 em;
-}
-.card {
+  width: 100%;
   background-color: burlywood;
   margin: 5px;
-}
-.card img {
-  width: 200px;
-  height: 200px;
-}
-.card p {
   text-align: center;
   color: black;
+  align-items: center;
+}
+
+.card img {
+  width: 1250px;
+  height: 500px;
+}
+
+body {
+  background: linear-gradient(-45deg, #072227, #35858b, #4fbdba, #aefeff);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+h1 {
+  text-align: center;
+  font-weight: 500;
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+.cardColor {
+  background-color: #072227;
+  color: azure;
+}
+p {
+  text-align: center;
+  text-transform: uppercase;
+}
+.buttonD {
+  width: 45%;
+  align-items: center;
+}
+
+.buttonU {
+  width: 45%;
+  align-items: center;
+  margin: 2rem;
+}
+.buttonL {
+  align-items: center;
+  margin: 2rem;
+  width: auto;
+  height: auto;
+  font-weight: 700;
+  color: azure;
+  background-color: transparent;
+  border: transparent;
+  text-transform: uppercase;
 }
