--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -1,3 +1,12 @@
+.searchbars {
+  padding: 1.5 rem;
+  margin: 1rem;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 .brand {
   padding: 1.5rem;
   margin: 1rem;
@@ -13,35 +22,78 @@
   text-transform: uppercase;
   word-spacing: 0.5vw;
 }
+.createButton {
+  margin-top: -15px;
+  background-color: #072227 !important;
+}
+
+.otherButton {
+  background-color: #072227 !important;
+  border: none;
+  margin: 2px;
+}
 
 .listDesign {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  gap: 5px;
 }
 .inputSearch {
   width: 100%;
 }
 
+.container {
+  padding: 2px 16px;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  margin: 5px;
+  gap: 10px;
+  border: none !important;
+}
+
 .cards {
   width: 100%;
-  background-color: burlywood;
+
   margin: 5px;
   text-align: center;
-  color: black;
+  color: rgb(23, 120, 133);
   align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 40%;
+  border: none !important;
+}
+.cardsBody {
+  background-color: #4fbdba;
+  border-top: #4fbdba;
+}
+
+.detailsCard {
+  text-align: center;
+  align-items: center;
+  flex: content;
 }
 
 .card img {
-  width: 1250px;
-  height: 500px;
+  width: 285px;
+  height: 250px;
+  object-fit: cover;
+  border: none !important;
 }
 
 body {
-  background: linear-gradient(-45deg, #072227, #35858b, #4fbdba, #aefeff);
+  background: linear-gradient(
+    -45deg,
+    #072227,
+    #35858b,
+    #4fbdba,
+    #aefeff
+  ) !important;
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
-
-  height: 100vh;
 }
 
 @keyframes gradient {
@@ -71,13 +123,14 @@ p {
 }
 .buttonD {
   width: 45%;
-  align-items: center;
+  background: rgb(182, 6, 6) !important;
+  border: none !important;
 }
 
-.buttonU {
+.allButton {
+  background: #072227 !important;
+  border: none !important;
   width: 45%;
-  align-items: center;
-  margin: 2rem;
 }
 .buttonL {
   align-items: center;
