--- a/jam3iya-app/src/App.css
+++ b/jam3iya-app/src/App.css
@@ -90,3 +90,24 @@ p {
   border: transparent;
   text-transform: uppercase;
 }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 33.3333333%;
+  height: 1000px;
+  background-color: black !important;
+  color: azure;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container1 {
+  padding: 2px 16px;
+}
+
+.illusion {
+  height: 20px;
+  width: 20px;
+}
